# physics-simulator

./: README.md  execute.bat  musings.cabal  musings.lkshf  physics-simulator.cabal
src/: Main.hs
src/Physics/: AbstractForces.hs  AbstractObjects.hs  Basic.hs  BasicDraw.hs  BasicOrbitsDraw.hs  BasicScene.hs  Coordinates.hs  DrawUtils.hs  Elementary.hs  Energy.hs  Forces.hs  Objects.hs  Primitives.hs  Tests.hs  Time.hs  World.hs  World.hszz
src/Physics/Control/: Basic.hs  Criteria.hs
src/Physics/Coordinates/: FrameOfReference.hs  Inertial.hs  Rotating.hs  Transform.hs
src/Physics/Craft/: Basic.hs  Rigid.hs  Rocket.hs
src/Physics/Orbit/: Freefall.hs
src/Physics/Planning/: Linear.hs
src/Physics/World/: Basic.hs  Small.hs
src/Swarm/: Settings.hs  Swarm.hs  Types.hs  Utils.hs  VectorArithm.hs
src/Tests/: Physics.hs
test/: Main.hs
