name: physics-simulator
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

executable musings
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers -any,
        deepseq -any,
        dlist -any,
        doctest -any,
        gloss -any,
        gnuplot -any,
        lens -any,
        linear -any,
        mtl -any,
        normaldistribution -any,
        random >=1.1 && <1.2,
        time -any,
        transformers -any,
        vector -any
    cc-options: -O3
    default-language: Haskell2010
    extra-libraries:
        m
    hs-source-dirs: src
    other-modules:
        Swarm.Swarm
        Swarm.Settings
        Physics.BasicOrbitsDraw
        Physics.Planning.Linear
    ghc-options: -rtsopts -ferror-spans -threaded -O2 -funfolding-use-threshold=16 -optc-O3 -optc-ffast-math

